cmake_minimum_required(VERSION 3.20)

add_subdirectory(googletest)

#organize the test projects
set_target_properties(gtest PROPERTIES FOLDER Google/GoogleTest)
set_target_properties(gtest_main PROPERTIES FOLDER Google/GoogleTest)
set_target_properties(gmock PROPERTIES FOLDER Google/GoogleTest)
set_target_properties(gmock_main PROPERTIES FOLDER Google/GoogleTest)

add_subdirectory(benchmark)

#organize the bench projects
set_target_properties(args_product_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(basic_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(benchmark PROPERTIES FOLDER Google/Benchmark)
set_target_properties(benchmark_gtest PROPERTIES FOLDER Google/Benchmark)
set_target_properties(benchmark_main PROPERTIES FOLDER Google/Benchmark)
set_target_properties(benchmark_name_gtest PROPERTIES FOLDER Google/Benchmark)
set_target_properties(benchmark_random_interleaving_gtest PROPERTIES FOLDER Google/Benchmark)
set_target_properties(benchmark_setup_teardown_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(benchmark_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(commandlineflags_gtest PROPERTIES FOLDER Google/Benchmark)
set_target_properties(complexity_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(diagnostics_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(display_aggregates_only_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(donotoptimize_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(filter_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(fixture_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(internal_threading_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(link_main_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(map_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(memory_manager_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(multiple_ranges_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(options_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(output_test_helper PROPERTIES FOLDER Google/Benchmark)
set_target_properties(perf_counters_gtest PROPERTIES FOLDER Google/Benchmark)
set_target_properties(perf_counters_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(register_benchmark_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(repetitions_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(report_aggregates_only_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(reporter_output_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(skip_with_error_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(spec_arg_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(spec_arg_verbosity_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(statistics_gtest PROPERTIES FOLDER Google/Benchmark)
set_target_properties(string_util_gtest PROPERTIES FOLDER Google/Benchmark)
set_target_properties(templated_fixture_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(time_unit_gtest PROPERTIES FOLDER Google/Benchmark)
set_target_properties(user_counters_tabular_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(user_counters_test PROPERTIES FOLDER Google/Benchmark)
set_target_properties(user_counters_thousands_test PROPERTIES FOLDER Google/Benchmark)